--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,1 @@
-
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost/bookhub_yantailor?serverTimezone=UTC&characterEncoding=utf-8&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=123
+spring.profiles.active=test
